@@ -1,6 +1,6 @@
 name: ci
 
-# Only build and release if a tag is pushed with a version number like 1.2.3
+# Only build and release when a tag is pushed with a version number like 1.2.3
 on:
   push:
     tags:
@@ -9,13 +9,13 @@ on:
 jobs:
   build_release:
     name: build and release
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-20.04  # Build on Debian-based distro
     steps:
       - name: checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: set version from tag  # Get the version number automatically from the tag
+      - name: set version number from commit tag  # Overwrite the placeholder version number in Cargo.toml with the tag
         run: |
           export VERSION=${{github.ref_name}}
           sed -i "s/0.0.0/$VERSION/g" Cargo.toml
@@ -28,11 +28,11 @@ jobs:
           cargo install cargo-deb
           cargo deb --verbose
           ls -lah target/debian
-      - name: release  # Publish the binary
+      - name: release
         uses: softprops/action-gh-release@v1
-        if: startsWith(github.ref, 'refs/tags/')  # Redundant but doesn't really hurt
+        if: startsWith(github.ref, 'refs/tags/')  # Presumably redundant due to the [0-9] filter, but kept for safety
         with:
-          body_path: ${{github.workspace}}/changelog/CHANGELOG.txt  # Get the changelog from a file
+          body_path: ${{github.workspace}}/changelog/CHANGELOG.txt  # Read the latest changelog from a file in the repo
           fail_on_unmatched_files: true
           files: |
             target/debian/*.deb
