@@ -1,0 +1,2 @@
+- Update README with working downloads
+- Bump version to 1.0.0 for complete release
